# RAG---Retrieval-Augmented-Generation

./: .gitignore  README.md  app.py  pyproject.toml
data/vector_store/: chroma.sqlite3
